--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -15,6 +15,12 @@
       <ion-icon name="square"></ion-icon>
       <ion-label>Tab Three</ion-label>
     </ion-tab-button>
+    
+    <ion-tab-button tab="cources">
+      <ion-icon name="list-outline"></ion-icon>
+      <ion-label>cources</ion-label>
+    </ion-tab-button>
+
   </ion-tab-bar>
 
 </ion-tabs>
